# yawiki

./: .gitignore  README.md  pyproject.toml
docs/api/: yandex-wiki-access.md  yandex-wiki-api-reference.md  yandex-wiki-pages.md
src/yawiki/: __init__.py  client.py  mcp_server.py
